apps/rpe/demo/base/pdf-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpe-pdf-service
  namespace: rpe
spec:
  ingressClassName: traefik
  rules:
    - host: cmc-pdf-service-demo.service.core-compute-demo.internal
      http:
        paths:
          - backend:
              service:
                name: pdf-service-java
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
